[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-system"
version = "0.1.0"
description = "GEO MVP system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
geo = "geo_system.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
